[package]
authors = ["Jason Antwi-Appah <hey@jasonaa.me>"]
description = "GitHub CLI extension to start new repos from starred template repositories"
edition = "2021"
name = "gh-start"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
inquire = "0.2.1"
reqwest = {version = "0.11.10", features = ["json"]}
serde = "1.0"
serde_yaml = "0.8"
tokio = {version = "1.17", features = ["full"]}
